trying to fix multiple pages issue

--- a/index.html
+++ b/index.html
@@ -949,7 +949,8 @@
           <ul class="blog-posts-list">
 
             <li class="blog-post-item">
-              <a href="./posts/reading-1.html">
+
+              <a href="posts/reading-1.html">
 
                 <figure class="blog-banner-box">
                   <img src="./assets/images/blog-1.jpg" alt="Reading 1" loading="lazy">
